<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/textViewPersonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="20dp"
        android:text="@string/person_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black_Gray" />

    <View
        android:id="@+id/separate_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textViewPersonInfo"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/separate_line" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separate_line"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/textViewName"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/textViewName"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:maxLength="20" />

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/sex"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignTop="@+id/textViewSex"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioMan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/man"
            android:textColor="@color/Black" />

        <RadioButton
            android:id="@+id/radioWoman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/woman"
            android:textColor="@color/Black" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewBirthday"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textViewSex"
        android:layout_below="@+id/textViewSex"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/birthday"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/textViewAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewBirthday"
        android:layout_alignBottom="@+id/textViewBirthday"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textViewBirthday"
        android:text="@string/ad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black_Gray" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textViewAD"
        android:layout_alignBottom="@+id/textViewAD"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textViewAD"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/editTextYear"
        android:layout_alignBottom="@+id/editTextYear"
        android:layout_toRightOf="@+id/editTextYear"
        android:text="@string/year"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black_Gray" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/editTextYear"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/textViewYear"
        android:ems="10"
        android:text="AutoCompleteTextView" />

</RelativeLayout>